tests/negative/traits/associated_type_cyclic.orng
// associated_type_cyclic.orng:14:12: error: cyclic type detected
//     @sizeof(Impler::I_Wanna_Be_Cyclic)
//           ^
// 
trait A { type I_Wanna_Be_Cyclic }

struct Impler {}
struct Wrapper[T] {x: T}
impl A for Impler {
    type I_Wanna_Be_Cyclic = Wrapper[Self::I_Wanna_Be_Cyclic] // TODO: should cause error about cyclic definition
}

fn main() -> Int {
    @sizeof(Impler::I_Wanna_Be_Cyclic)
}